--- a/sitio_desarrollado/css/style.css
+++ b/sitio_desarrollado/css/style.css
@@ -1,6 +1,6 @@
 /*!
  * Bootstrap v4.2.1 (https://getbootstrap.com/)
- * Copyright 2011-2018 The Bootstrap Authors
+ * Copyright 2011-2018 The Bootstrap Authors53
  * Copyright 2011-2018 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
@@ -8077,7 +8077,7 @@ h1, h2, h3, h4, h5,
     font-size: 28px;
     line-height: 1; }
     .ftco-navbar-light .navbar-brand span {
-      color: #00bd56; }
+      color: #fe8333; }
     .ftco-navbar-light .navbar-brand:hover, .ftco-navbar-light .navbar-brand:focus {
       color: #000000; }
     @media (max-width: 767.98px) {
@@ -8143,7 +8143,7 @@ h1, h2, h3, h4, h5,
       font-size: 12px;
       color: #000000; }
       .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:hover, .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu .dropdown-item:focus {
-        background: #00bd56;
+        background: #fe8333;
         color: #fff; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
@@ -8153,7 +8153,7 @@ h1, h2, h3, h4, h5,
         box-shadow: none; } }
   .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
     color: #fff;
-    background: #00bd56;
+    background: #fe8333;
     border-radius: 0px; }
     @media (max-width: 767.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
@@ -8162,13 +8162,13 @@ h1, h2, h3, h4, h5,
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
         color: #fff;
-        background: #00bd56;
+        background: #fe8333;
         border-radius: 4px; } }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #00bd56; }
+    color: #fe8333; }
     .ftco-navbar-light .navbar-nav > .nav-item.active > a:before {
       visibility: visible;
-      background-color: #00bd56;
+      background-color: #fe8333;
       -webkit-transform: scaleX(1);
       -ms-transform: scaleX(1);
       transform: scaleX(1); }
@@ -8414,8 +8414,8 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #00bd56;
-    border: 1px solid #00bd56;
+    background: #fe8333;
+    border: 1px solid #fe8333;
     color: #fff; }
     .btn.btn-primary:hover {
       border: 1px solid #00bd56;
@@ -8531,14 +8531,14 @@ h1, h2, h3, h4, h5,
       width: 50px;
       height: 50px;
       border-radius: 50%;
-      background: #00bd56;
+      background: #fe8333;
       -webkit-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
       -moz-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
       box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15); }
       .services .media-body .btn-custom span {
         color: #fff; }
   .services:hover, .services.active {
-    background: #00bd56; }
+    background: #18c3af; }
     .services:hover .icon, .services.active .icon {
       background: #fff; }
     .services:hover .media-body, .services.active .media-body {
@@ -8549,7 +8549,7 @@ h1, h2, h3, h4, h5,
       background: #fff;
       right: -20px; }
       .services:hover .btn-custom span, .services.active .btn-custom span {
-        color: #00bd56; }
+        color: #fe8333; }
   @media (max-width: 991.98px) {
     .services {
       margin-bottom: 30px; } }
@@ -8561,7 +8561,7 @@ h1, h2, h3, h4, h5,
     width: 70px;
     height: 70px;
     border-radius: 50%;
-    background: #00bd56;
+    background: #fe8333;
     -webkit-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15); }
@@ -8769,7 +8769,7 @@ h1, h2, h3, h4, h5,
   overflow-x: hidden;
   position: relative;
   padding: 4em 0;
-  background: #00bd56; }
+  background: #fe8333; }
   @media (max-width: 1199.98px) {
     .ftco-counter {
       background-position: center center !important; } }
@@ -8881,7 +8881,7 @@ textarea.form-control {
       color: #000000; }
   .block-7 .excerpt {
     margin-bottom: 0px;
-    color: #00bd56;
+    color: #fe8333;
     font-size: 16px;
     font-weight: 600;
     text-transform: uppercase; }
@@ -8908,7 +8908,7 @@ textarea.form-control {
     width: 60%;
     margin: 0 auto; }
     .block-7 .btn-primary:hover, .block-7 .btn-primary:focus {
-      background: #00bd56 !important;
+      background: #18c3af !important;
       color: #fff; }
   .block-7:hover, .block-7:focus {
     -webkit-box-shadow: 0px 24px 48px -13px rgba(0, 0, 0, 0.11);
@@ -8933,7 +8933,7 @@ textarea.form-control {
     background: -webkit-linear-gradient(45deg, #207dff 0%, #00bd55 100%);
     background: -o-linear-gradient(45deg, #207dff 0%, #00bd55 100%);
     background: -ms-linear-gradient(45deg, #207dff 0%, #00bd55 100%);
-    background: linear-gradient(45deg, #207dff 0%, #00bd55 100%);
+    background: linear-gradient(45deg, #fe8333 0%, #ffb400 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207dff', endColorstr='#00bd55', GradientType=1 ); }
     @media (min-width: 992px) {
       .ftco-appointment .overlay {
@@ -8998,7 +8998,7 @@ textarea.form-control {
   height: inherit !important; }
 
 .footer {
-  background: #1a1a1a;
+  background: #18c3af;
   position: relative;
   z-index: 0;
   overflow: hidden;
@@ -9054,7 +9054,7 @@ textarea.form-control {
       color: rgba(255, 255, 255, 0.4); }
   .footer .ftco-footer-social li a {
     background: rgba(255, 255, 255, 0.1);
-    color: #00bd56; }
+    color: #ffffff; }
 
 .ftco-footer-social li {
   list-style: none;
@@ -9257,7 +9257,7 @@ textarea.form-control {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background: #00bd56; }
+    background: #fe8333; }
     .testimony-wrap .icon span {
       color: #fff; }
   .testimony-wrap .user-img {
@@ -9336,7 +9336,7 @@ textarea.form-control {
   font-style: normal; }
 
 .ftco-faqs button[aria-expanded="true"] {
-  background-color: #00bd56;
+  background-color: #18c3af;
   color: #fff !important; }
   .ftco-faqs button[aria-expanded="true"] .fa {
     color: #fff !important; }
