--- a/sitio_desarrollado/css/style.css
+++ b/sitio_desarrollado/css/style.css
@@ -8535,9 +8535,7 @@ h1, h2, h3, h4, h5,
       -webkit-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
       -moz-box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15);
       box-shadow: 0px 10px 30px -4px rgba(0, 0, 0, 0.15); }
-      .services .media-body .btn-custom span {
-        color: #fff; }
-    .services:hover .icon, .services.active .icon {
+     services.active .icon {
       background: #fff; }
     .services:hover .media-body, .services.active .media-body {
       color: rgba(255, 255, 255, 0.9); }
