--- a/sitio_desarrollado/css/style.css
+++ b/sitio_desarrollado/css/style.css
@@ -9132,7 +9132,7 @@ textarea.form-control {
 .blog-img,
 .user-img {
   width: 100%;
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center center; }
 
